<resources>
    <string name="app_name">Xapo Test App</string>

    <!-- list_tem.xml -->
    <string name="label_name">Name:</string>
    <string name="label_owner">Owner:</string>
    <string name="placeholder_fork">10000 k</string>

    <!-- fragment_repository.xml -->
    <string name="image_forks">Forks icon</string>
    <string name="image_watchers">Watchers icon</string>
    <string name="image_issues">Open Issues icon</string>
    <string name="image_avatar">Avatar image</string>
    <string name="placeholder_name">android/architecture-samples</string>
    <string name="placeholder_description">A collection of samples to discuss and showcase different architectural tools and patterns for Android apps.</string>

    <!-- message_no_internet.xml -->
    <string name="label_no_connection">No Internet!</string>
    <string name="label_please_check">Please check your connection \nand try again</string>
    <string name="image_no_connection">No connection icon</string>

    <!-- message_no_database.xml -->
    <string name="label_no_cache">No Database!</string>
    <string name="label_downloading_from_server">Downloading from server… \nPlease wait!</string>
    <string name="image_no_database">No database icon</string>

    <!-- message_error.xml -->
    <string name="label_error">Unknown Error</string>
    <string name="label_error_info">Unknown error encountered. \n\nWe\'re looking at this issue now. \n\nPlease try again later!</string>
    <string name="image_error">Error icon</string>

    <!-- message_downloading.xml -->
    <string name="label_downloading">Downloading</string>
    <string name="image_downloading">Downloading icon</string>

    <!-- navigation.xml -->
    <string name="label_repository_info">Repository Info</string>

</resources>