<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="@dimen/message_image_size"
            android:layout_height="@dimen/message_image_size"
            android:src="@drawable/ic_no_connection"
            android:contentDescription="@string/image_no_connection"/>

        <TextView
            android:text="@string/label_no_connection"
            style="@style/TitleTextViewStyle"/>

        <TextView
            android:text="@string/label_please_check"
            style="@style/SubtitleTextViewStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>