<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/test"
            android:layout_width="@dimen/message_image_size"
            android:layout_height="@dimen/message_image_size"
            android:src="@drawable/ic_no_database"
            android:contentDescription="@string/image_no_connection"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:text="@string/label_no_cache"
            style="@style/TitleTextViewStyle" />

        <TextView
            android:text="@string/label_downloading"
            style="@style/SubtitleTextViewStyle"/>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>