<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.clp3z.xapotestapp.repo.RepoViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@color/blue_grey_100">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:cardCornerRadius="6dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.clp3z.xapotestapp.base.customview.CircleImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:src="@drawable/ic_android"
                    app:border_color="@color/colorAccent"
                    app:border_width="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/forkImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/forksTextView"
                    app:layout_constraintEnd_toEndOf="@+id/forksTextView"
                    app:layout_constraintStart_toStartOf="@+id/forksTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:srcCompat="@drawable/ic_fork"
                    android:contentDescription="@string/image_forks" />

                <ImageView
                    android:id="@+id/watchersImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/watchersTextView"
                    app:layout_constraintEnd_toEndOf="@+id/watchersTextView"
                    app:layout_constraintStart_toStartOf="@+id/watchersTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:srcCompat="@drawable/ic_watcher"
                    android:contentDescription="@string/image_watchers" />

                <ImageView
                    android:id="@+id/issuesImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/issuesTextView"
                    app:layout_constraintEnd_toEndOf="@+id/issuesTextView"
                    app:layout_constraintStart_toStartOf="@+id/issuesTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                    app:srcCompat="@drawable/ic_issue"
                    android:contentDescription="@string/image_issues" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@{viewModel.repository.name}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
                    tools:text="@string/placeholder_name" />

                <TextView
                    android:id="@+id/descriptionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/placeholder_description"
                    android:text="@{viewModel.repository.description}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

                <TextView
                    android:id="@+id/forksTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="10400"
                    android:text="@{Integer.toString(viewModel.repository.forks)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/watchersTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forkImage" />

                <TextView
                    android:id="@+id/watchersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="2678"
                    android:text="@{Integer.toString(viewModel.repository.watchers)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/issuesTextView"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/forksTextView"
                    app:layout_constraintTop_toBottomOf="@+id/watchersImage" />

                <TextView
                    android:id="@+id/issuesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="148"
                    android:text="@{Integer.toString(viewModel.repository.issues)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/watchersTextView"
                    app:layout_constraintTop_toBottomOf="@+id/issuesImage" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>